--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">My Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Portfolio</a>
+            <a href="#" class="nav-link">About Me</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
