--- a/src/about.html
+++ b/src/about.html
@@ -10,28 +10,13 @@
   <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Nick Boncella | Home</title>
+  <title>Nick Boncella | About</title>
 </head>
 
 <body>
 
-  <!-- HEADER SECTION -->
-  <header id="header">
-    <div class="dark-overlay">
-      <div class="container">
-        <div class="row">
-          <div class="col d-flex flex-column justify-content-center">
-            <h1 class="text-center">Nick Boncella</h1>
-            <h2 class="text-center mt-2">Web Designer | Developer</h2>
-          </div>
-          <i class="fa fa-angle-down"></i>
-        </div>
-      </div>
-    </div>
-  </header>
-
   <!-- NAVBAR -->
-  <nav id="nav" class="navbar navbar-expand-md navbar-dark sticky-top">
+  <nav id="nav" class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container">
       <!-- navbar brand and toggler icon -->
       <a href="index.html" class="navbar-brand">Nick Boncella</a>
@@ -41,14 +26,14 @@
       <!-- navbar links -->
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item nav-active">
+          <li class="nav-item">
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Portfolio</a>
           </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link">About Me</a>
+          <li class="nav-item nav-active">
+            <a href="#" class="nav-link">About Me</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
@@ -58,41 +43,10 @@
     </div>
   </nav>
 
-  <!-- INTRO -->
-  <div id="intro">
-    <div class="container my-5">
-      <h3 class='mb-4 text-center'>Welcome To My Website!</h3>
-      <!-- two col layout, hide img on xs,sm screens -->
-      <div class="row align-items-center">
-        <div class="col-md-5 d-none d-md-block">
-          <img class="portrait mb-4" src="../img/port.jpg" alt="A Self Portrait">
-        </div>
-        <div class="col-md-7 mb-3">
-          <p class="text-center">Hi, my name is Nick Boncella. I am a self taught web designer and developer in HTML, CSS and JavaScript. I learned to code using a combination of books and online courses & tutorials. If you would like to learn more about me or download a copy of my resume, click the button below.</p>
-        </div>
-        <!-- btn to about page -->
-        <a href="#" class="btn btn-about">Read More</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- PORTFOLIO -->
-  <div id="portfolio-head">
-    <!-- heading to portfolio section, flexbox columns -->
-    <div class="container d-flex flex-column align-items-center">
-      <h3 class="mt-5">View My Portfolio</h3>
-      <p class="mt-3 mb-3 text-center">Shown below are a few projects I've completed. Click the button below to see them all!</p>
-      <!-- bnt to portfolio page -->
-      <a href="#" class="btn mb-5">See All</a>
-    </div>
-  </div>
-
-  <div id="portfolio">
+  <!-- ABOUT -->
+  <div id="about">
     <div class="container">
-      <!-- row of cards containing portfolio examples -->
-      <div class="row">
-        <div class="col"></div>
-      </div>
+
     </div>
   </div>
 
