--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,25 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
+  <footer id="footer">
+    <div class="py-3 flex-container">
+      <span></span>
+      <div class="footer-icons">
+        <a href="https://www.linkedin.com/in/nicholas-boncella-b7482b82/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a class="px-2" href="https://github.com/NickBoncella" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.instagram.com/nick.codes/?hl=en" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <span class="copyright"></span>
+    </div>
+  </footer>
+
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
