Edit footer and portfolio section

--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,15 @@
     <div class="container my-5">
       <h3 class='mb-4 text-center'>Welcome To My Website!</h3>
       <!-- two col layout, hide img on xs,sm screens -->
-      <div class="row align-items-center">
+      <div class="row align-items-center justify-content-center">
         <div class="col-md-5 d-none d-md-block">
           <img class="portrait mb-4" src="../img/port.jpg" alt="A Self Portrait">
         </div>
-        <div class="col-md-7 mb-3">
+        <div class="col-md-7 mb-3 text-center">
           <p class="text-center">Hi, my name is Nick Boncella. I am a self taught web designer and developer in HTML, CSS and JavaScript. I learned to code using a combination of books and online courses & tutorials. If you would like to learn more about me or download a copy of my resume, click the button below.</p>
+          <!-- btn to about page -->
+          <a href="about.html" class="btn mt-3 btn-about">Read More</a>
         </div>
-        <!-- btn to about page -->
-        <a href="#" class="btn btn-about">Read More</a>
       </div>
     </div>
   </div>
@@ -80,10 +80,10 @@
   <div id="portfolio-head">
     <!-- heading to portfolio section, flexbox columns -->
     <div class="container d-flex flex-column align-items-center">
-      <h3 class="mt-5">View My Portfolio</h3>
-      <p class="mt-3 mb-3 text-center">Shown below are a few projects I've completed. Click the button below to see them all!</p>
-      <!-- bnt to portfolio page -->
-      <a href="#" class="btn mb-5">See All</a>
+      <h3 class="mt-4">My Portfolio</h3>
+      <p class="mt-2 mb-4 text-center">Shown below are a few projects I've completed.</p>
+      <!-- bnt to portfolio page
+      <a href="#" class="btn mb-5">See All</a> -->
     </div>
   </div>
 
@@ -98,13 +98,12 @@
 
   <!-- FOOTER -->
   <footer id="footer">
-    <div class="py-3 flex-container">
-      <span></span>
+    <div class="py-2 flex-container">
       <div class="footer-icons">
         <a href="https://www.linkedin.com/in/nicholas-boncella-b7482b82/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a class="px-2" href="https://github.com/NickBoncella" target="_blank">
+        <a class="px-3" href="https://github.com/NickBoncella" target="_blank">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://www.instagram.com/nick.codes/?hl=en" target="_blank">
