--- a/src/index.html
+++ b/src/index.html
@@ -62,15 +62,18 @@
   <div id="intro">
     <div class="container my-5">
       <h3 class='mb-4 text-center'>Welcome To My Website!</h3>
-      <!-- two col layout, hide img on xs,sm screens -->
-      <div class="row align-items-center justify-content-center">
-        <div class="col-md-5 d-none d-md-block">
-          <img class="portrait mb-4" src="../img/port.jpg" alt="A Self Portrait">
-        </div>
-        <div class="col-md-7 mb-3 text-center">
-          <p class="text-center">Hi, my name is Nick Boncella. I am a self taught web designer and developer in HTML, CSS and JavaScript. I learned to code using a combination of books and online courses & tutorials. If you would like to learn more about me or download a copy of my resume, click the button below.</p>
-          <!-- btn to about page -->
-          <a href="about.html" class="btn mt-3 btn-about">Read More</a>
+      <!-- slide up on scroll -->
+      <div id="slide-up" class="slide-up">
+        <!-- two col layout, hide img on xs,sm screens -->
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-5 d-none d-md-block">
+            <img class="portrait mb-3" src="../img/port.jpg" alt="A Self Portrait">
+          </div>
+          <div class="col-md-7 text-center">
+            <p class="text-center">Hi, my name is Nick Boncella. I am a self taught web designer and developer in HTML, CSS and JavaScript. I learned to code using a combination of books and online courses & tutorials. If you would like to learn more about me or download a copy of my resume, click the button below.</p>
+            <!-- btn to about page -->
+            <a href="about.html" class="btn mt-3 btn-about">Read More</a>
+          </div>
         </div>
       </div>
     </div>
