--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <title>Nick Boncella | Home</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#nav" data-offset="0">
 
   <!-- HEADER SECTION -->
   <header id="header">
@@ -41,11 +41,11 @@
       <!-- navbar links -->
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item nav-active">
-            <a href="index.html" class="nav-link">Home</a>
+          <li class="nav-item">
+            <a href="#header" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Portfolio</a>
+            <a href="#portfolio-head" class="nav-link">Portfolio</a>
           </li>
           <li class="nav-item">
             <a href="about.html" class="nav-link">About Me</a>
