Init contact page, add content to about page

--- a/src/contact.html
+++ b/src/contact.html
@@ -33,32 +33,20 @@
             <a href="index.html#portfolio-head" class="nav-link">Portfolio</a>
           </li>
           <li class="nav-item nav-active">
-            <a href="#" class="nav-link active">About Me</a>
+            <a href="about.html" class="nav-link">About Me</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="#" class="nav-link active">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- ABOUT -->
-  <div id="about">
+  <!-- CONTACT -->
+  <div id="contact">
     <div class="container">
-      <div class="row justify-content-center my-2">
-        <div class="col-sm-10 align-self-center text-center about-content">
-          <p class="p-4">
-            Hi, my name is Nick Boncella and I'm an aspiring Web Designer and Developer living in Pittsburgh, Pennsylvania.
-            I graduated from the University of Pittsburgh in 2015 with a bachelor's degree in Finance.
-            After receiving my degree, I began working for a large bank in the Pittsburgh area in their Wealth Management department.
-            I became interested in programming when I discovered Team Treehouse, an online platform offering coding tutorials, and began learning the basics of HMTL and CSS.
-            
 
-          </p>
-          <a href="resume/Nicholas_Boncella_Resume.docx" download="Nicholas_Boncella_Resume" class="btn btn-resume">Download Resume</a>
-        </div>
-      </div>
     </div>
   </div>
 
