--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             <a href="about.html" class="nav-link">About Me</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
     <!-- heading to portfolio section, flexbox columns -->
     <div class="container d-flex flex-column align-items-center">
       <h3 class="mt-4">My Portfolio</h3>
-      <p class="mt-2 mb-4 text-center">Shown below are a few projects I've completed.</p>
+      <p class="mb-4 text-center">Shown below are a few projects I've completed.</p>
       <!-- bnt to portfolio page
       <a href="#" class="btn mb-5">See All</a> -->
     </div>
